# DEQ-RWKV

./: .gitignore  README.md  cnb.yml  main.ipynb  main.py  model.py  pyproject.toml  requirements.txt  train.py
.ide/: Dockerfile
data/: dataset.py  test.jsonl
ops/: block.py  cmix.py  model.py  rosa.py  tmix.py  tokenizer.py  wkv.py
tokenizer/: tokenizer_config.json
