[project]
name = "deq-rwkv"
version = "0.1.0"
description = "深度均衡模型与 RWKV-v7 架构结合的实验性项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning",
    "matplotlib",
    "muon-optimizer",
    "ninja>=1.13.0",
    "numpy",
    "tensorboard",
    "torch",
    "torchdeq",
    "transformers",
]

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
