[project]
name = "deq-rwkv"
version = "0.1.0"
description = "DEQ与 RWKV-v7 架构结合的实验性项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning",
    "matplotlib",
    "muon-optimizer",
    "ninja",
    "numpy",
    "polars",
    "pyarrow",
    "tensorboard",
    "torch",
    "torchdeq",
    "transformers",
]

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
torchdeq = { git = "https://github.com/sablin39/torchdeq.git" }